# rust-dataset-profiler

./: .gitignore  Cargo.toml  README.md  bad_test.csv  config.toml  test.csv  test.json  test.jsonl
benches/: profile_benchmarks.rs
src/: cli.rs  config.rs  errors.rs  lib.rs  logging.rs  main.rs  types.rs
src/readers/: csv.rs  json.rs  parquet.rs
tests/: cli_error_tests.rs  profile_tests.rs
