[package]
name = "dataset-profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization / config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# CSV processing
csv = "1.3"

# Parquet (latest)
parquet = "58.1.0"

# Optional
indicatif = "0.18"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "profile_benchmarks"
harness = false
